WebHelpers ChangeLog
====================

tip (development version)
-------------------------
* webhelpers.constants:
  - Fix spelling of Massachusetts.
* webhelpers.html.tools:
  - Fix HTML overescaping and underescaping in auto_link().  Patch by Marius
    Gedminas.
* webhelpers.paginate:
  - Change for SQLAlchemy 0.6. (bug #11)
* webhelpers.pylonslib:
  - Fix HTML overescaping.  Patch by Marius Gedminas.


1.0b1 (2009-11-20)
------------------
* Delete deprecated subpackage: rails.
  These are replaced by new helpers in date, html, misc, number, text.
* Delete other deprecated subpackages: commands, hinclude, htmlgen, pagination.
  Pagination is replaced by paginate.
* webhelpers.constants:
  - ``uk_counties`` returns tuples rather than lists.
* webhelpers.feedgenerator:
  - ``rfc3339_date`` now accepts date objects without crashing.
  - Add 'generator' and 'source' properties to RSS2 feeds. Patch by
    Vince Spicer.
  - Add 'published' property to Atom1 feeds.
* webhelpers.html.converters:
  - New helper ``render()`` formats HTML to text.
  - New helper ``sanitize()`` strips HTML tags from user input.
* webhelprs.html.tags:
  - New helper ``css_classes()`` to add classes to a tag programmatically.
  - Fix bug in tag helpers when passing 'id_' argument (although 'id' is
    recommended instead).
  - Add OptionGroup class and optgroup support to select().  Patch by
    Alexandre Bourget.
* webhelpers.html.tools:
  - New helper ``strip_tags()`` deletes HTML tags in a string.
* webhelpers.paginate:
  - Allow all versions of SQLAlchemy > 0.3.
  - convert "_range" and "_pagelink" function to Page class method so that they
    can be overridden
  - pager "onclick" argument use template string value. So, javascript code can
    use "partial_url" or "page" value or any. Backward compatibility is
    considered.
  - Add presliced list option to avoid slicing when list is already.
* webhelpers.pylonslib:
  - is now a package.